# country-service

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  run-app.sh
grpc-service/: Cargo.toml  build.rs
grpc-service/proto/: countries.proto
grpc-service/src/: main.rs
grpc-service/src/config/: app_settings.rs  mod.rs
grpc-service/src/controller/: country_controller.rs
migrations/2024-05-12-084738_contry_table/: up.sql
migrations/2024-05-12-180225_seed_data/: down.sql  up.sql
rest-service/: Cargo.toml
rest-service/src/: main.rs
rest-service/src/config/: app_settings.rs  app_state.rs  mod.rs
rest-service/src/controller/: mod.rs
shared/: Cargo.toml
shared/migrations/2024-05-12-084738_contry_table/: down.sql
shared/src/: lib.rs  util.rs
shared/src/entity/: country.rs
shared/src/repository/: country_repository.rs
shared/src/service/: country_service.rs
src/: main.rs  schema.rs  util.rs
src/config/: app_settings.rs  app_state.rs  mod.rs
src/controller/: country_controller.rs  health_controller.rs  mod.rs
src/entity/: country.rs
src/repository/: country_repository.rs  mod.rs
src/service/: mod.rs
