[package]
name = "country-rest-service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = "0.7.5"
tokio = { version = "1.27.0", features = ["full"] }
envconfig = "0.10.0"
dotenv = { version = "0.15.0" }
env_logger = { version = "0.10.0" }
log = { version = "0.4.20" }
diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
r2d2 = "0.8.10"
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.95" }