[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { version = "0.15.0" }
env_logger = { version = "0.10.0" }
log = { version = "0.4.20" }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = { version = "1.0.95" }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
hyper = { version = "1.3.1", features = ["full"] }
envconfig = "0.10.0"
diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
r2d2 = "0.8.10"
diesel_migrations = "2.1.0"
futures = "0.3.28"
length_aware_paginator = "1.0.0"